2019-01-14  Keith Marshall  <keith@users.osdn.me>

	Republish binutils-2.31.1 and gcc-8.2.0 package sets.

	* mingw32/mingw32-binutils.xml (binutils-bin, binutils-dev)
	(binutils-lic, binutils-info, binutils-man, binutils-lang): Add
	release references for version 2.31.1-2; this is a rebuilt package, to
	correct a defect in the mkstemp() function from mingwrt-5.2

	* mingw32/mingw32-gcc4.xml (gcc-core-bin): Require binutils-2.31.1-2
	(gcc-lic, gcc-core-bin, gcc-info, gcc-man, gcc-lang, libgcc-dll-1)
	(gcc-ada-bin, libgnat-dll, gcc-c++-bin, gcc-c++-man, libstdc++-dll-6)
	(gcc-fortran-bin, gcc-fortran-info, gcc-fortran-man, libgfortran-dll)
	(gcc-objc-bin, libobjc-dll-4, libatomic-dll-1, libgomp-dll-1)
	(libssp-dll-1, libquadmath-dll-0, libquadmath-info): Add release
	references for version 8.2.0-3 package set; once again, this is a
	rebuild to correct the mingwrt-5.2 mkstemp() defect.

	* common/issue.log mingw32/issue.log: Update accordingly.

2018-12-31  Keith Marshall  <keith@users.osdn.me>

	Add a missing package affiliation.

	* mingw32/mingw32-zlib.xml (zlib): Affiliate it with the
	"MinGW Standard Libraries" package group; previously, it had no
	affiliation whatsoever, and thus wasn't visible at its natural
	location within the package group hierarchy.

2018-12-31  Keith Marshall  <keith@users.osdn.me>

	Correct a trivial typographic error.

	* test/pkgspec.xsd (download-host): s/wich/which/

2018-12-31  Keith Marshall  <keith@users.osdn.me>

	Publish zlib-1.2.11 package set on OSDN.net

	* mingw32/mingw32-zlib.xml (download-host): Relocate to osdn.net
	(zlib-doc, zlib-lic, zlib-man, libz-dev, libz-dll-1): Add release
	references for version 1.2.11-1, and also for previously unmanaged
	version 1.2.8-2; delete all references to earlier versions, for which
	the package files will remain on SourceForge.net, but have not been
	relocated to, and will not be accessible on, the OSDN.net host.
	(minizip, libminizip): Delete all release references to versions other