@@ -51,11 +51,11 @@
   cd33ad74b608bce33ea297801253e6efbafce27c 2012073100 mingw32-mingw-utils.xml
   2d0fee36823579871e8d747ae4d4676da6071654 2018122800 mingw32-mpc.xml
   1b5e1e0c486dad8396884033777e13357365ad76 2018122800 mingw32-mpfr.xml
-  5c9570cce1ddd4fe275b83acbc06739a4361c26a 2019011400 mingw32-package-list.xml
+  5c9570cce1ddd4fe275b83acbc06739a4361c26a 2019012200 mingw32-package-list.xml
   1f15439ee5f66ec22321c7aa853559b6f8f7172f 2015090800 mingw32-pexports.xml
   cdb2a4dbedfc9f2cdfc92340f6f9b12da061c0d9 2012073100 mingw32-popt.xml
   6032af6ff68aa4821cf51938781fd9e75f05de5f 2016082200 mingw32-pthreads-w32.xml
-  05e01205713a570248b6ed4e74fa1acc6aa5d5c3 2018122400 mingw32-runtime.xml
+  b744f76f2fece56318e800fa3641ece98d27d1d0 2019012200 mingw32-runtime.xml
   12acb32f80e49c893167cfae82e448dd766d49bb 2013070100 mingw32-wsl-candidate.xml
   247a02890f109a5fe4996fde4af9d576dca3cd1e 2012073100 mingw32-xz.xml
   a96bd18deeb11a9f5828a5757e8962faac2f3217 2018123101 mingw32-zlib.xml
